--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SoundCloud Player</title>
+    <title>Microtonal Guitar</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -23,7 +23,7 @@
         </button>
 
         <div class="player-body">
-          <p class="title">Artist - Track Title</p>
+          <p class="title"> Diego Ferri - BABABABA </p>
           <div id="waveform" class="waveform"></div>
 
           <div class="controls">
