--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img
             id="playButtonIcon"
             class="play-button-icon"
-            src="assets/icons/play.svg"
+            src="play.svg"
             alt="Play Button"
           />
         </button>
@@ -31,7 +31,7 @@
               <img
                 id="volumeIcon"
                 class="volume-icon"
-                src="assets/icons/volume.svg"
+                src="volume.svg"
                 alt="Volume"
               />
               <input
