--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
 
         <div class="player-body">
-          <p class="title"> Diego Ferri - BABABABA </p>
+          <p class="title"> TEST TEST TEST </p>
           <div id="waveform" class="waveform"></div>
 
           <div class="controls">
